Se agregaron requerimientos faltantes

--- a/index.html
+++ b/index.html
@@ -55,14 +55,39 @@
                 <strong>Consumo:</strong> <span id="consumoResult"></span> kWh
             </div>
             <div class="result-item">
-                <strong>Monto a pagar:</strong> $<span id="montoResult"></span>
-            </div>
-            <div class="result-item">
                 <strong>Corriente:</strong> <span id="corrienteResult"></span> A
             </div>
             <div class="result-item">
                 <strong>Capacitor sugerido:</strong> <span id="capacitorResult"></span> µF
             </div>
+            <div class="result-item">
+                <strong>Cargo Fijo:</strong> $<span id="montoFijoResult"></span>
+            </div>
+            <div class="result-item">
+                <strong>Consumo primeros 600 kWh:</strong> $<span id="monto600Result"></span>
+            </div>
+            <div class="result-item">
+                <strong>Consumo excedente de 600 kWh (142 kWh):</strong> $<span id="montoExcedente142Result"></span>
+            </div>
+            <div class="result-item">
+                <strong>Consumo excedente de 600 kWh (43 kWh):</strong> $<span id="montoExcedente43Result"></span>
+            </div>
+            <div class="result-item">
+                <strong>Consumo excedente de 600 kWh (503 kWh):</strong> $<span id="montoExcedente503Result"></span>
+            </div>
+            <div class="result-item">
+                <strong>Subsidio:</strong> $<span id="subsidioResult"></span>
+            </div>
+            <div class="result-item">
+                <strong>Alumbrado Público:</strong> $<span id="alumbradoResult"></span>
+            </div>
+            <div class="result-item">
+                <strong>IVA (21%):</strong> $<span id="ivaResult"></span>
+            </div>
+            <div class="result-item">
+                <strong>Total Bimestral:</strong> $<span id="totalResult"></span>
+            </div>
+            
 
             <button class="export-btn" id="exportBtn">Exportar a Excel</button>
         </div>
